src/main/kotlin/com/example/address_project/global/error/exception/BusinessException.kt
package com.example.address_project.global.error.exception

abstract class BusinessException (
    val errorCode : ErrorCode
) : RuntimeException()
